ManagementApp/Daemon/WSNManager/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/opt/java/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/usr/share/java/bluej/bluejcore.jar:/usr/share/java/bluej/junit-4.8.2.jar:/usr/share/java/mysql-jdbc/mysql-connector-java-bin.jar:/opt/tinyos-2.1.2/support/sdk/java/tinyos.jar:/usr/share/java/commons-math/commons-math.jar:/usr/share/java/commons-math/commons-math-2.2.jar:/usr/share/java/jmagick/jmagick-6.4.0.jar:/media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager
-d
/media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/java/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager/Telos/NodeDriver.java
<---- end of javadoc command ---->
Loading source file /media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager/Telos/NodeDriver.java...
/media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager/Telos/NodeDriver.java:41: error: <identifier> expected
                this.
                     ^
/media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager/Telos/NodeDriver.java:41: error: not a statement
                this.
                    ^
/media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager/Telos/NodeDriver.java:44: error: illegal start of expression
                this.nodesToApp.put(r.get("id"), r.get("application_id"));
                    ^
/media/sda5/vyuka/WSNProtectLayer/ManagementApp/Daemon/WSNManager/Telos/NodeDriver.java:44: error: ';' expected
                this.nodesToApp.put(r.get("id"), r.get("application_id"));
                               ^
4 errors
